--- a/main.css
+++ b/main.css
@@ -37,16 +37,17 @@ header {
 
 .first-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
 
 .first-one, .first-two {
-    width: 50%;
     margin: 0 50px;
 }
 
 .first-one {
+    max-width: 40%;
     display: flex;
     flex-direction: column;
     align-content: space-evenly;
@@ -76,12 +77,45 @@ header {
 .first-two {
     display: flex;
     justify-content: center;
-<<<<<<< HEAD
 }
 
 .first-two img {
     min-width: 100%;
     height: 300px;
-=======
->>>>>>> 89ba4f2ac529d52ae63aa874726509b910152444
+}
+
+.second-section {
+    padding: 50px 0;
+}
+
+.second-section h1 {
+    text-align: center;
+    color: #005F69;
+    font-size: 36px;
+}
+
+.four-img {
+    width: 70%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: auto;
+    padding: 50px 0;
+}
+
+.four-img img{
+    width: 200px;
+    height: 200px;
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 20px;
+    border-color: #50C878;
+    margin: 0px 10px;
+}
+
+.four-img p {
+    margin: 0 15px;
+    width: 200px;
+    text-align: center;
+    color: #005F69;
 }
